# cloud_run_container_cursor

./: .gcloudignore  Dockerfile  docker-compose.yaml  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: deploy.yml
app/: main.py
