[project]
name = ""
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.2",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-secret-manager>=2.25.0",
    "google-cloud-storage>=3.4.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "pydantic[email]>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
